# iii-cli

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: create-tag.yml  release.yml  rollback.yml  validate-release.yml
src/: advisory.rs  cli.rs  download.rs  error.rs  exec.rs  github.rs  main.rs  platform.rs  registry.rs  state.rs  update.rs
