[package]
name = "iii-cli"
version = "0.2.2"
edition = "2021"
description = "Unified CLI dispatcher for iii-engine tools"
license = "Apache-2.0"

[[bin]]
name = "iii-cli"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"

# Async -- reduced feature set
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-std", "fs"] }

# HTTP -- reqwest respects HTTP_PROXY / HTTPS_PROXY / NO_PROXY automatically
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Progress
indicatif = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Version comparison
semver = { version = "1", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Archive extraction
flate2 = "1"
tar = "0.4"
zip = "2"

# Platform directories
dirs = "6"

# SHA256 verification
sha2 = "0.10"

# Futures for streaming downloads
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
